[package]
name = "backup2swift"
version = "0.1.0"
authors = ["Tim Dettrick <t.dettrick@uq.edu.au>"]

[dependencies]
clap = "2.26.2"
curl = "0.4.8"
formdata = "0.12.2"
hex = "0.2.0"
hmac = "0.4.2"
hyper = "0.10.13"
log = "0.3.8"
pipe = "0.0.2"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha-1 = "0.4.1"
stderrlog = "0.2.3"
url = "1.5.1"
